--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
-    "name": "Veez Video Stream Bot",
+    "name": "Rio Video Stream Bot",
     "description": "bot to stream video on telegram video chat, powered by pytgcalls and pyrogram",
-    "logo": "https://telegra.ph/file/103a5208bb1698a8b33de.png",
+    "logo": "https://telegra.ph/file/32f09a049aefdaf6eee49.jpg",
     "keywords": [
         "pytgcalls",
         "telegram bot",
         "video stream"
     ],
-    "website": "https://t.me/levinachannel",
-    "repository": "https://github.com/levina-lab/video-stream",
-    "success_url": "https://t.me/dlwrml",
+    "website": "https://t.me/riobotsupport",
+    "repository": "https://github.com/RioProjectX/Streaming-VCG",
+    "success_url": "https://t.me/riio00",
     "env": {
         "API_ID": {
             "description": "your APP_ID from my.telegram.org",
